use .io, not .com

--- a/_config.yml
+++ b/_config.yml
@@ -3,7 +3,7 @@ title: TaalService Limburg
 email: demm@kaosx.us
 description: "Taalservice Limburg   ––   Voor al uw taalservices   ––   Snel, accuraat & betrokken"
 baseurl: ""
-url: "https://solilocide.github.com"
+url: "https://solilocide.github.io"
 kramdown:
   input: GFM
 
